<?xml version="1.0"?>
<package>
  <name>jane_ui</name>
  <version>0.0.0</version>
  <description>The jane_ui package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="sungwook@todo.todo">sungwook</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>Apache 2.0</license>


    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <run_depend>roscpp</run_depend>
    <build_depend>std_msgs</build_depend>
    <run_depend>std_msgs</run_depend>
    <build_depend>rospy</build_depend>
    <run_depend>rospy</run_depend>
    <build_depend>geometry_msgs</build_depend>
    <run_depend>geometry_msgs</run_depend>
    <build_depend>nav_msgs</build_depend>
    <run_depend>nav_msgs</run_depend>
    <build_depend>sensor_msgs</build_depend>
    <run_depend>sensor_msgs</run_depend>
    <build_depend>libpcl-all-dev</build_depend>
    <run_depend>libpcl-all</run_depend>
    <build_depend>message_generation</build_depend>
    <run_depend>message_generation</run_depend>
    <build_depend>diagnostic_updater</build_depend>
    <run_depend>diagnostic_updater</run_depend>
    <run_depend>message_runtime</run_depend>
    <run_depend>python-serial</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
